--- a/css/register.css
+++ b/css/register.css
@@ -32,7 +32,8 @@ html {
 /**********************************************************
 ************************** QUEST **************************
 **********************************************************/
-.quest {
+.page-register {
     align-items: center;
     padding: 15px;
+    text-align: center;
 }
